# claude-codex

./: .gitignore  .mcp.json  NOTICE.md  README.md  mcp_config.json  plugin.json  pyproject.toml
.codex-plugin/: plugin.json
claude_codex/: __init__.py  api.py  auth.py  chat.py  consent_cli.py  mcp_server.py  models.py  paths.py  response.py  security.py  subscription_auth.py  subscription_fingerprint.py
docs/: SOURCE_MAP.md
scripts/: claude_codex_consent.py  claude_codex_doctor.py  claude_codex_login.py  claude_codex_mcp.py
skills/claude-codex/: SKILL.md
skills/claude-doctor/: SKILL.md
tests/: conftest.py  test_core.py
